--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Chrono Vitesse EPS</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>ChronoVitesse • EPS</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<h1>Chrono Vitesse EPS</h1>
-<button onclick="location.href='params.html'">Commencer</button>
-<footer>ChronoVitesse - Équipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
+  <header class="app-header">
+    <h1>ChronoVitesse • EPS</h1>
+    <div class="header-actions"><a class="btn" href="aide.html">❓ Aide</a></div>
+  </header>
+
+  <main class="container">
+    <section class="hero">
+      <h1>ChronoVitesse</h1>
+      <div class="subtitle">Chronos simples, intuitifs et compatibles ScanProf</div>
+      <a class="btn btn-large btn-primary" href="params.html">🚀 Commencer</a>
+      <a class="btn" href="aide.html">❓ Aide</a>
+    </section>
+  </main>
+
+  <footer class="footer">
+    ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB
+  </footer>
 </body>
 </html>
