--- a/intermediaire.html
+++ b/intermediaire.html
@@ -4,34 +4,104 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Chrono • Temps intermédiaires</title>
+  <title>Temps intermédiaires • ChronoVitesse</title>
   <link rel="stylesheet" href="styles.css" />
-  <!-- Lien vers ton script EXISTANT de chrono avec temps intermédiaire -->
-  <!-- Remplace intermediaire.js par ton fichier actuel pour conserver 100% de la logique -->
-  <script defer src="intermediaire.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 </head>
 <body>
   <header class="app-header">
-    <h1>Chrono • Temps intermédiaires</h1>
-    <nav class="top-nav">
-      <a class="nav-btn" href="index.html">Accueil</a>
-      <a class="nav-btn" href="aide.html">❓ Aide</a>
-    </nav>
+    <h1>🏁 Temps intermédiaires</h1>
+    <div class="header-actions"><a class="btn" href="menu.html">⬅️ Modes</a> <a class="btn" href="aide.html">❓ Aide</a></div>
   </header>
 
   <main class="container">
+    <section class="panel center">
+      <div class="timer" id="timer">00:00.0</div>
+    </section>
+
     <section class="panel">
-      <p class="muted">Cette page conserve <strong>ton script existant</strong> pour garantir que le QR reste exactement identique. 
-      Seule l’ergonomie (CSS, tailles, couleurs) est harmonisée.</p>
-      <div id="app-intermediaire">
-        <!-- Ton interface existante sera rendue ici par intermediaire.js -->
+      <div class="controls center">
+        <button id="start" class="btn btn-start btn-large">Démarrer</button>
+        <button id="lap" class="btn btn-lap btn-large" disabled>Intermédiaire</button>
+        <button id="stop" class="btn btn-stop btn-large" disabled>Stop</button>
+        <button id="reset" class="btn btn-reset" disabled>Réinitialiser</button>
       </div>
+    </section>
+
+    <section class="panel">
+      <h2>Intermédiaires</h2>
+      <div id="lapsList" class="grid"></div>
+    </section>
+
+    <section class="panel">
+      <h2>Distance (option)</h2>
+      <div class="lap-bar">
+        <label>Tour (m) <input id="tourLen" type="number" min="0" step="1"></label>
+        <button id="addLap" class="btn btn-primary">+1 tour</button>
+        <button id="add14" class="btn">+¼</button>
+        <button id="add12" class="btn">+½</button>
+        <button id="add34" class="btn">+¾</button>
+        <button id="minus10" class="btn">−10 m</button>
+        <button id="plus10" class="btn">+10 m</button>
+        <input id="manualAdjust" type="number" step="1" placeholder="+/− m">
+        <button id="applyAdjust" class="btn">OK</button>
+        <button id="undoLap" class="btn btn-reset">Annuler</button>
+        <div class="small">Tours: <span id="lapsCount">0</span> • Distance: <strong id="distTotal">0</strong> m</div>
+      </div>
+    </section>
+
+    <section id="qrZone" class="panel qr-zone hidden">
+      <h2>QR compatible ScanProf</h2>
+      <div id="qrGrid" class="qr-grid"></div>
     </section>
   </main>
 
-  <footer class="app-footer">
+  <footer class="footer">
     ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB
-    <a class="btn btn-help" href="aide.html">❓ Aide</a>
   </footer>
+
+  <script src="common.js"></script>
+  <script>
+    const p = requireParams();
+    bindDistanceUI(document);
+
+    let t0=null, tick=null, lastLapMs=null;
+    const timer = document.getElementById('timer');
+    const list = document.getElementById('lapsList');
+    const laps = [];
+
+    function addLap(){
+      const now = Date.now();
+      const cum = now - t0;
+      const split = lastLapMs ? (now - lastLapMs) : cum;
+      lastLapMs = now;
+      laps.push({ splitMs: split, cumMs: cum });
+      const row = document.createElement('div');
+      row.className = 'panel';
+      row.innerHTML = `<div><strong>Intermédiaire ${laps.length}</strong> — Split: ${formatMs(split)} • Cumul: ${formatMs(cum)}</div>`;
+      list.appendChild(row);
+    }
+
+    start.onclick=()=>{
+      t0 = Date.now(); lastLapMs = null; list.innerHTML=''; laps.length=0;
+      tick = setInterval(()=> timer.textContent = formatMs(Date.now()-t0), 100);
+      start.disabled=true; lap.disabled=false; stop.disabled=false; reset.disabled=true;
+      document.getElementById('qrZone').classList.add('hidden');
+    };
+    lap.onclick=addLap;
+    stop.onclick=()=>{
+      clearInterval(tick);
+      stop.disabled=true; reset.disabled=false; lap.disabled=true;
+      const duree_s = Math.round((Date.now()-t0)/1000);
+      const baseItem = buildScanProfItem({ nom:p.nom, prenom:p.prenom, classe:p.classe, sexe:p.sexe,
+        distance_m: dist.total, duree_s, vma_kmh: vmaFromDistanceTime(dist.total, duree_s) });
+      const detailed = { ...baseItem, details: { splits: laps.map(l=>Math.round(l.splitMs)), cumul: laps.map(l=>Math.round(l.cumMs)) } };
+      renderQRArray([detailed]);
+    };
+    reset.onclick=()=>{
+      clearInterval(tick); timer.textContent='00:00.0'; start.disabled=false; lap.disabled=true; stop.disabled=true; reset.disabled=true;
+      dist.history=[]; updateDistUI(); list.innerHTML=''; document.getElementById('qrZone').classList.add('hidden');
+    };
+  </script>
 </body>
 </html>
