--- a/params.html
+++ b/params.html
@@ -1,28 +1,69 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<title>Paramètres</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Paramètres • ChronoVitesse</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-<h2>Paramètres de la course</h2>
-<form action="menu.html">
-<label>Nom: <input type="text" name="nom"></label>
-<label>Prénom: <input type="text" name="prenom"></label>
-<label>Classe: <input type="text" name="classe"></label>
-<label>Sexe:
-<select name="sexe">
-<option value="">Choix</option>
-<option value="F">Fille</option>
-<option value="M">Garçon</option>
-<option value="A">Autre</option>
-</select>
-</label>
-<label>Longueur du tour (m): <input type="number" name="tour"></label>
-<label>Durée minuteur (min): <input type="number" name="minuteur"></label>
-<button type="submit">Valider</button>
-</form>
-<footer>ChronoVitesse - Équipe EPS Lycée Vauban - LUXEMBOURG - JB</footer>
+  <header class="app-header">
+    <h1>Paramètres</h1>
+    <div class="header-actions"><a class="btn" href="index.html">⬅️ Accueil</a></div>
+  </header>
+
+  <main class="container">
+    <section class="panel compact">
+      <h2>Identité</h2>
+      <div class="grid two">
+        <label>Nom <input id="nom" type="text" autocomplete="family-name"></label>
+        <label>Prénom <input id="prenom" type="text" autocomplete="given-name"></label>
+        <label>Classe <input id="classe" type="text" placeholder="ex: 2ndeC"></label>
+        <label>Sexe
+          <select id="sexe">
+            <option value="">Choix</option>
+            <option value="F">Fille</option>
+            <option value="M">Garçon</option>
+            <option value="Autre">Autre</option>
+          </select>
+        </label>
+      </div>
+    </section>
+
+    <section class="panel compact">
+      <h2>Course</h2>
+      <div class="grid two">
+        <label>Longueur d’un tour (m) <input id="tourLen" type="number" min="0" step="1" placeholder="ex: 200"></label>
+        <label>Durée du minuteur (minutes) <input id="minuteurMin" type="number" min="1" step="1" value="6"></label>
+      </div>
+      <div class="small">Tu pourras changer ces valeurs plus tard.</div>
+    </section>
+
+    <div class="controls center">
+      <button class="btn btn-primary btn-large" id="saveGo">Enregistrer et continuer ➜</button>
+    </div>
+  </main>
+
+  <footer class="footer">
+    ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB
+  </footer>
+
+  <script src="common.js"></script>
+  <script>
+    document.getElementById('saveGo').addEventListener('click', ()=>{
+      const p = {
+        nom: nom.value.trim(),
+        prenom: prenom.value.trim(),
+        classe: classe.value.trim(),
+        sexe: sexe.value.trim(),
+        tourLen: Number(tourLen.value||0),
+        minuteurMin: Math.max(1, Number(minuteurMin.value||6))
+      };
+      if(!p.nom||!p.prenom||!p.classe||!p.sexe){ alert("Merci de renseigner toutes les infos."); return; }
+      saveParams(p);
+      location.href = 'menu.html';
+    });
+  </script>
 </body>
 </html>
