--- a/index.html
+++ b/index.html
@@ -2,28 +2,21 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>ChronoVitesse • EPS</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header class="app-header">
-    <h1>ChronoVitesse • EPS</h1>
-    <div class="header-actions"><a class="btn" href="aide.html">❓ Aide</a></div>
-  </header>
-
+  <header><h1>ChronoVitesse • EPS</h1></header>
   <main class="container">
     <section class="hero">
       <h1>ChronoVitesse</h1>
-      <div class="subtitle">Chronos simples, intuitifs et compatibles ScanProf</div>
-      <a class="btn btn-large btn-primary" href="params.html">🚀 Commencer</a>
-      <a class="btn" href="aide.html">❓ Aide</a>
+      <div class="small">Simple, épuré et compatible ScanProf</div>
+      <a class="btn btn-lg btn-primary" href="params.html">🚀 Commencer</a>
+      <a class="btn btn-ghost" href="aide.html">❓ Aide</a>
     </section>
   </main>
-
-  <footer class="footer">
-    ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB
-  </footer>
+  <div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUX — JB</div>
 </body>
 </html>
