--- a/multi.html
+++ b/multi.html
@@ -2,109 +2,37 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Multi (4) • ChronoVitesse</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Multi</title>
+  <link rel="stylesheet" href="styles.css">
   <script src="https://cdn.jsdelivr.net/npm/qrcodejs@1.0.0/qrcode.min.js"></script>
 </head>
 <body>
-  <header class="app-header">
-    <h1>👥 Multi (jusqu’à 4)</h1>
-    <div class="header-actions"><a class="btn" href="menu.html">⬅️ Modes</a> <a class="btn" href="aide.html">❓ Aide</a></div>
-  </header>
-
-  <main class="container">
-    <section id="cards" class="panel grid two"></section>
-
-    <section class="panel center">
-      <button id="stopAll" class="btn btn-large">Stop général + QR</button>
-    </section>
-
-    <section id="qrZone" class="panel qr-zone hidden">
-      <h2>QR compatible ScanProf</h2>
-      <div id="qrGrid" class="qr-grid"></div>
-    </section>
-  </main>
-
-  <footer class="footer">
-    ChronoVitesse — Équipe EPS Lycée Vauban — LUXEMBOURG — JB
-  </footer>
-
-  <script src="common.js"></script>
-  <script>
-    function buildCard(i){
-      const wrap = document.createElement('div');
-      wrap.className='panel compact';
-      wrap.innerHTML = `
-        <h2>Élève n°${i}</h2>
-        <div class="grid two">
-          <label>Nom <input class="nom" type="text"></label>
-          <label>Prénom <input class="prenom" type="text"></label>
-          <label>Classe <input class="classe" type="text"></label>
-          <label>Sexe
-            <select class="sexe"><option value="">Choix</option><option value="F">Fille</option><option value="M">Garçon</option><option value="Autre">Autre</option></select>
-          </label>
-        </div>
-        <div class="center"><div class="timer timer-min t">00:00.0</div></div>
-        <div class="controls">
-          <button class="btn btn-start s">Démarrer</button>
-          <button class="btn btn-stop p" disabled>Stop</button>
-          <button class="btn btn-reset r" disabled>Réinitialiser</button>
-        </div>
-        <div class="lap-bar">
-          <label>Tour (m) <input class="tour" type="number" min="0" step="1"></label>
-          <button class="btn btn-primary l1">+1 tour</button>
-          <button class="btn q1">+¼</button>
-          <button class="btn h1">+½</button>
-          <button class="btn t3">+¾</button>
-          <button class="btn m-">−10 m</button>
-          <button class="btn p+">+10 m</button>
-          <input class="man" type="number" step="1" placeholder="+/− m"><button class="btn ok">OK</button>
-          <button class="btn btn-reset u">Annuler</button>
-          <div class="small">Tours: <span class="laps">0</span> • Distance: <strong class="dist">0</strong> m</div>
-        </div>`;
-      return wrap;
-    }
-    function attachCard(card){
-      let t0=null, tick=null;
-      const timer = card.querySelector('.t');
-      const tracker = { tourLen:0, history:[], get total(){ return Math.max(0, Math.round(this.history.reduce((s,h)=>s+h.value_m,0))); } };
-      function render(){ card.querySelector('.dist').textContent = tracker.total.toString();
-        card.querySelector('.laps').textContent = tracker.history.filter(h=>h.type==='lap').length.toString(); }
-      card.querySelector('.tour').addEventListener('input', e=> tracker.tourLen = Number(e.target.value||0));
-      const add = v=>{ if(v!=='manual' && !tracker.tourLen) return alert('Définir la longueur de tour.'); tracker.history.push(v==='manual'?{type:'manual', value_m:Number(card.querySelector('.man').value||0)}:v); render(); };
-      card.querySelector('.l1').onclick=()=> add({type:'lap', value_m:tracker.tourLen});
-      card.querySelector('.q1').onclick=()=> add({type:'frac', value_m:tracker.tourLen*0.25});
-      card.querySelector('.h1').onclick=()=> add({type:'frac', value_m:tracker.tourLen*0.5});
-      card.querySelector('.t3').onclick=()=> add({type:'frac', value_m:tracker.tourLen*0.75});
-      card.querySelector('.m-').onclick=()=> add({type:'manual', value_m:-10});
-      card.querySelector('.p+').onclick=()=> add({type:'manual', value_m:+10});
-      card.querySelector('.ok').onclick=()=> add('manual');
-      card.querySelector('.u').onclick=()=>{ tracker.history.pop(); render(); };
-
-      card.querySelector('.s').onclick=()=>{ t0=Date.now(); tick=setInterval(()=> timer.textContent = formatMs(Date.now()-t0), 100);
-        card.querySelector('.s').disabled=true; card.querySelector('.p').disabled=false; card.querySelector('.r').disabled=true; card._t0=t0; card._tick=tick; card._tracker=tracker; };
-      card.querySelector('.p').onclick=()=>{ clearInterval(card._tick); card.querySelector('.p').disabled=true; card.querySelector('.r').disabled=false; };
-      card.querySelector('.r').onclick=()=>{ clearInterval(card._tick); timer.textContent='00:00.0'; card.querySelector('.s').disabled=false; card.querySelector('.p').disabled=true; card.querySelector('.r').disabled=true; tracker.history=[]; render(); };
-    }
-
-    const cardsWrap = document.getElementById('cards');
-    const cards=[]; for(let i=1;i<=4;i++){ const c=buildCard(i); cardsWrap.appendChild(c); cards.push(c); }
-    cards.forEach(attachCard);
-
-    stopAll.onclick=()=>{
-      const results = cards.map(c=>{
-        const nom=c.querySelector('.nom').value.trim();
-        const prenom=c.querySelector('.prenom').value.trim();
-        const classe=c.querySelector('.classe').value.trim();
-        const sexe=c.querySelector('.sexe').value.trim();
-        const t0=c._t0||Date.now(); const duree_s=Math.round((Date.now()-t0)/1000);
-        const dm=c._tracker?c._tracker.total:0; const vma=vmaFromDistanceTime(dm, duree_s);
-        return { nom, prenom, classe, sexe, distance_m:dm, duree_s, vma_kmh:vma };
-      });
-      renderQRArray(results);
-    };
-  </script>
+<header><h1>👥 Multi (jusqu’à 4)</h1><a class="btn" href="menu.html">⬅️ Modes</a></header>
+<main class="container">
+  <section id="wrap" class="panel grid two"></section>
+  <section class="panel center"><button id="stopAll" class="btn btn-lg">Stop général + QR</button></section>
+  <section id="qr" class="panel qr hidden"><h2>QR compatible ScanProf</h2><div id="qrBox" class="qr-box"></div></section>
+</main>
+<div class="footer">ChronoVitesse — Équipe EPS Lycée Vauban — LUX — JB</div>
+<script src="common.js"></script>
+<script>
+function card(i){
+  const div=document.createElement('div');
+  div.className='panel';
+  div.innerHTML=`<h2>Élève n°${i}</h2>
+  <div class="grid two"><label>Nom <input class="nom"></label><label>Prénom <input class="prenom"></label><label>Classe <input class="classe"></label></div>
+  <div class="center"><div class="timer timer-min t">00:00.0</div></div>
+  <div class="action-bar"><button class="btn btn-start s">Démarrer</button><button class="btn btn-stop p" disabled>Stop</button><button class="btn btn-reset r" disabled>Reset</button></div>`;
+  let t0=null,tick=null;
+  div.querySelector('.s').onclick=()=>{ t0=Date.now(); tick=setInterval(()=> div.querySelector('.t').textContent=formatMs(Date.now()-t0), 100); div.querySelector('.s').disabled=true; div.querySelector('.p').disabled=false; div.querySelector('.r').disabled=true; };
+  div.querySelector('.p').onclick=()=>{ clearInterval(tick); div.querySelector('.p').disabled=true; div.querySelector('.r').disabled=false; };
+  div.querySelector('.r').onclick=()=>{ clearInterval(tick); div.querySelector('.t').textContent='00:00.0'; div.querySelector('.s').disabled=false; div.querySelector('.p').disabled=true; div.querySelector('.r').disabled=true; };
+  div._getRes=()=>{ const duree_s=Math.round((Date.now()-(t0||Date.now()))/1000); return { nom:div.querySelector('.nom').value.trim(), prenom:div.querySelector('.prenom').value.trim(), classe:div.querySelector('.classe').value.trim(), sexe:'', distance_m:0, duree_s, vma_kmh:0 } };
+  return div;
+}
+const wrap=document.getElementById('wrap'); const cards=[card(1),card(2),card(3),card(4)]; cards.forEach(c=>wrap.appendChild(c));
+stopAll.onclick=()=>{ showQR(cards.map(c=>c._getRes())); };
+</script>
 </body>
 </html>
